# ComfyUI-SoulX-Podcast

./: .gitignore  README.md  README_EN.md  nodes.py  pyproject.toml  rules.mdc  开发文档.md
